# ghostty-blackhole-main

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  UPSTREAM_1.2.1_UPDATE_ANALYSIS.md  blackhole_advanced.txt  blackhole_debug.txt  blackhole_presets.txt  build_blackhole.ps1  debug_state.md  package_release.ps1
Blakhole_UI/: CMakeLists.txt  Main.qml  app.manifest  app.rc  app_version.rc.in  main.cpp  src.qrc
Blakhole_UI/build_qt/: .ninja_deps  .ninja_log  CMakeCache.txt  appblakholeui_qmltyperegistrations.cpp  blackhole_advanced.txt  blackhole_idlelist.txt  blackhole_presets.txt  blackhole_preview.glsl  blackhole_schedule.txt  blackhole_system.txt  build.ninja  cmake_install.cmake  src.qrc.depends
Blakhole_UI/build_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Blakhole_UI/build_qt/.qt/deploy_qml_imports/: appBlakholeUI.cmake
Blakhole_UI/build_qt/.qt/qml_imports/: appBlakholeUI_build.rsp  appBlakholeUI_conf.cmake  appBlakholeUI_conf.rsp
Blakhole_UI/build_qt/.qt/rcc/: appBlakholeUI_raw_qml_0.qrc  appBlakholeUI_raw_qml_0_extra_qmldirs.qrc  qmake_BlakholeUI.qrc
Blakhole_UI/build_qt/.rcc/qmlcache/: all_aotstats.aotstatslist  appBlakholeUI_Main_qml.cpp  appBlakholeUI_Main_qml.cpp.aotstats  appBlakholeUI_qml_loader_file_list.rsp  appBlakholeUI_qmlcache_loader.cpp  module_BlakholeUI.aotstatslist
Blakhole_UI/build_qt/.rcc/qmlcache/appBlakholeUI_components/: BlackholeLargePreview_qml.cpp  BlackholeLargePreview_qml.cpp.aotstats  BlackholePreviewArea_qml.cpp  BlackholePreviewArea_qml.cpp.aotstats  BlackholePreview_qml.cpp  BlackholePreview_qml.cpp.aotstats  EAlertDialog_qml.cpp  EAlertDialog_qml.cpp.aotstats  EAvatar_qml.cpp  EAvatar_qml.cpp.aotstats  EBlurCard_qml.cpp  EBlurCard_qml.cpp.aotstats  EButton_qml.cpp  EButton_qml.cpp.aotstats  EDrawer_qml.cpp  EDrawer_qml.cpp.aotstats  EDropDown_qml.cpp  EDropDown_qml.cpp.aotstats  EList_qml.cpp  EList_qml.cpp.aotstats  ESlider_qml.cpp  ESlider_qml.cpp.aotstats  ESwitchButton_qml.cpp  ESwitchButton_qml.cpp.aotstats  ETheme_qml.cpp  ETheme_qml.cpp.aotstats  ETimeDisplay_qml.cpp  ETimeDisplay_qml.cpp.aotstats  EToast_qml.cpp  EToast_qml.cpp.aotstats
Blakhole_UI/build_qt/.rcc/qmlcache/appBlakholeUI_pages/: AdvancedConfig_qml.cpp  AdvancedConfig_qml.cpp.aotstats  BlackholeConfig_qml.cpp  BlackholeConfig_qml.cpp.aotstats  IdleListConfig_qml.cpp  IdleListConfig_qml.cpp.aotstats  ScheduleConfig_qml.cpp  ScheduleConfig_qml.cpp.aotstats
Blakhole_UI/build_qt/.rcc/qmllint/: appBlakholeUI.rsp  appBlakholeUI_json.rsp  appBlakholeUI_module.rsp
Blakhole_UI/build_qt/BlakholeUI/: Main.qml  appBlakholeUI_qml_module_dir_map.qrc  qmldir
Blakhole_UI/build_qt/BlakholeUI/components/: BlackholeLargePreview.qml  BlackholePreview.qml  BlackholePreviewArea.qml  EAlertDialog.qml  EAvatar.qml  EBlurCard.qml  EButton.qml  EDrawer.qml  EList.qml  ESlider.qml  ESwitchButton.qml  ETheme.qml  ETimeDisplay.qml  EToast.qml  qmldir
Blakhole_UI/build_qt/BlakholeUI/pages/: BlackholeConfig.qml  IdleListConfig.qml  ScheduleConfig.qml
Blakhole_UI/build_qt/appBlakholeUI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Blakhole_UI/build_qt/appBlakholeUI_autogen/TAC5DWH4SE/: moc_blackholecore.cpp.d  moc_blackholecore.cpp.json  moc_blackholepreviewfbo.cpp.d  moc_blackholepreviewfbo.cpp.json  moc_systemtray.cpp.d  moc_systemtray.cpp.json
Blakhole_UI/build_qt/meta_types/: appBlakholeUI_json_file_list.txt  appBlakholeUI_json_file_list.txt.timestamp  qt6appblakholeui_metatypes.json
Blakhole_UI/build_qt/qml/QtQuick/: plugins.qmltypes
Blakhole_UI/build_qt/qmltypes/: appBlakholeUI_foreign_types.txt
Blakhole_UI/build_qt/shaders/: frag_preview_header.glsl
Blakhole_UI/components/: AboutWindow.qml  BlackholeLargePreview.qml  BlackholePreview.qml  BlackholePreviewArea.qml  EAlertDialog.qml  EAvatar.qml  EBlurCard.qml  EButton.qml  EDrawer.qml  EDropDown.qml  EList.qml  ESlider.qml  ESwitchButton.qml  ETimeDisplay.qml  EToast.qml  IdleListPanel.qml  RendererErrorDialog.qml  RunningApplicationPicker.qml  UpdateDialog.qml
Blakhole_UI/core/: application_catalog.cpp  application_catalog.h  avatar_storage.cpp  avatar_storage.h  blackholecore.cpp  blackholecore.h  blackholepreviewfbo.cpp  blackholepreviewfbo.h  renderer_startup_diagnostics.cpp  renderer_startup_diagnostics.h  systemtray.cpp  systemtray.h  update_checker.cpp  update_checker.h  update_release.cpp  update_release.h
Blakhole_UI/pages/: AboutPage.qml  AdvancedConfig.qml  BlackholeConfig.qml  IdleListConfig.qml  ScheduleConfig.qml
Doc/: BUILD_PACKAGE.md  LINUX_BASELINE.md  UBUNTU_MIGRATION_PLAN.md  功能完成度清单.md
assets/: blackhole-macos.icns
cmake/: AppVersion.cmake  app_version.h.in  renderer_version.rc.in
docs/: 发布新版本指南.md
gnome-extension/: README.md
release/: blackhole_debug.txt  blackhole_presets.txt
shaders/: blackhole_preview.glsl  frag_desktop_header.glsl  frag_preview_header.glsl  vert.glsl
src/: autostart_registry.cpp  autostart_registry.h  autostart_xdg.cpp  autostart_xdg.h  bloom_renderer.cpp  bloom_renderer.h  capture_dxgi.cpp  capture_dxgi.h  capture_wgc.cpp  capture_wgc.h  d3d11_renderer.cpp  foreground_window.cpp  foreground_window.h  frame_limiter.cpp  frame_limiter.h  game_detection.cpp  game_detection.h  gl_texture.cpp  gl_texture.h  gnome_idle_backend.h  gnome_idle_monitor.cpp  gnome_idle_monitor.h  gui_config.cpp  gui_config.h  hotkey.cpp  hotkey.h  macos_main.mm  main.cpp  main_linux.cpp  media_session.cpp  media_session.h  monitors.cpp  monitors.h  movement_settings.cpp  movement_settings.h  mpris_backend.h  mpris_monitor.cpp  mpris_monitor.h  portal_capture.cpp  portal_capture.h  (+14 more)
tests/: application_catalog_tests.cpp  autostart_registry_tests.cpp  avatar_storage_tests.cpp  bloom_fullscreen_shader_tests.cpp  ds09_linux_tests.cpp  foreground_window_tests.cpp  frame_limiter_tests.cpp  game_detection_tests.cpp  gnome_idle_monitor_tests.cpp  gnome_shader_cache_test.py  gnome_uniform_usage_test.py  linux_idle_event_driven_test.py  media_session_tests.cpp  movement_settings_tests.cpp  mpris_monitor_tests.cpp  portal_capture_tests.cpp  qml_lazy_preview_test.py  (+7 more)
(+81 files in other folders)
